fix button outline bug on mobile nav menu

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -138,7 +138,7 @@
         flex-direction: column;
         justify-content: start;
         align-items: center;
-        padding-top: 10vh;
+        padding-top: 20vh;
     }
 
 
